@@ -13,6 +13,7 @@ Bug fixes
 - #2083: export from CPSSkins: don't make the user fiddle with skins
 - #2086: export from CPSSkins: missing xmlns namespace with lxml engine
 - #2089: export from CPSSkins: formatting the output
+- #2076: export from CPSSkins: problems with non ascii-chars outside of portlets
 - #2045: Absolute path to themes container is persistent
 - #2034: provide "cherry picking" theme negociator
 - #2032: removal of main content element if main content is empty
